# routes/users.js
@@ -16,6 +16,11 @@ const {
   userNotification,
 } = require("../utils/Auth");
 
+// Login Route
+router.post("/login", async (req, res) => {
+  await userLogin(req.body, "user", res);
+});
+
 //#region Admin Routes
 router.post(
   "/notification/:id",
@@ -26,27 +31,24 @@ router.post(
   }
 );
 // blocking user
-router.put("/block/:id", userAuth, block, async (req, res) => {
-  await userBlock(userId, true, res);
+router.put("/block/:email", userAuth, block, async (req, res) => {
+  await userBlock(req.params.email, true, res);
 });
-router.put("/unblock/:id", userAuth, block, async (req, res) => {
-  await userBlock(userId, false, res);
+router.put("/unblock/:email", userAuth, block, async (req, res) => {
+  await userBlock(req.params.email, false, res);
 });
 // Admin Registration Route
 router.post("/register-admin", async (req, res) => {
   await userRegister(req.body, "admin", res);
 });
 // Admin Login Route
-router.post("/login-admin", async (req, res) => {
-  await userLogin(req.body, "admin", res);
-});
 // Get Users List Route (Admin only)
 router.get("/", userAuth, checkRole(["admin"]), async (req, res) => {
   await getListUsers(res);
 });
 
-router.delete("/:id", userAuth, checkRole(["admin"]), async (req, res) => {
-  await userDelete(req.params.id, res);
+router.delete("/:email", userAuth, checkRole(["admin"]), async (req, res) => {
+  await userDelete(req.params.email, res);
 });
 
 //#endregion
@@ -56,17 +58,13 @@ router.delete("/:id", userAuth, checkRole(["admin"]), async (req, res) => {
 router.post("/register-user", async (req, res) => {
   await userRegister(req.body, "user", res);
 });
-// Users Login Route
-router.post("/login-user", async (req, res) => {
-  await userLogin(req.body, "user", res);
-});
 // Profile Route
 router.get("/profile", userAuth, block, async (req, res) => {
   return res.json(serializeUser(req.user));
 });
 // Delete Route
 router.delete("/delete", userAuth, block, async (req, res) => {
-  await userDelete(req.user._id, res);
+  await userDelete(req.user.email, res);
 });
 // Update Route
 router.put("/update", userAuth, block, async (req, res) => {
